# npcc

./: .gitignore  AGENTS.md  LICENSE  README.md  pyproject.toml
.claude/: settings.json
configs/: study.toml
notebooks/: Simulation_Study.ipynb  Simulation_Study_helpers.py  conditional_copula_demo.ipynb  gcbicop_demo.py  gpu_cpu_benchmark.ipynb  pfnr_bicop_demo.ipynb  pfnr_conditional_copula.ipynb  pfnr_sinkhorn_projection_unconditional.ipynb
paper/: README.md  model_details.tex
src/npcc/: __init__.py  _common.py  bicopbase.py  eval.py  gcbicop.py  gckbicop.py  gtkbicop.py  pfnr_bicop.py  tabpfn_criterion_distribution1d.py  tabpfn_density1d.py  tabpfn_distribution1d.py  tabpfn_quantile_density1d.py  tabpfn_quantile_distribution1d.py  tprbicop.py
src/npcc/core/: __init__.py  _common.py  pfnr_bicop.py  tabpfn_criterion_distribution1d.py  tabpfn_distribution1d.py  tabpfn_quantile_distribution1d.py
src/npcc/experiments/: __init__.py  __main__.py  cli.py  config.py  metrics.py  plots.py  runner.py  scenarios.py
src/npcc/finetune/: __init__.py  __main__.py  config.py  evaluate.py  loop.py  save_load.py
src/npcc/priors/: __init__.py  components.py  datasets.py  families.py  links.py  prior.py
tests/: conftest.py  test_common.py  test_eval.py  test_finetune.py  test_gcbicop.py  test_gckbicop.py  test_gtkbicop.py  test_pfnr_bicop.py  test_priors.py  test_tabpfn_criterion_distribution1d.py  test_tabpfn_density1d.py  test_tabpfn_quantile_density1d.py  test_tabpfn_quantile_distribution1d.py  test_tprbicop.py
tests/experiments/: test_cli.py  test_config.py  test_metrics.py  test_runner.py  test_scenarios.py
